# rag

./: .gitignore
1.1-basic-rag/: .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
1.1-basic-rag/prompts/: __init__.py  rag_prompt.py
1.1-basic-rag/rag/: __init__.py  chain.py  loader.py  retriever.py  splitter.py
1.1-basic-rag/tests/: test_app.py  test_chain.py  test_chroma_store.py  test_config.py  test_loader.py  test_retriever.py  test_splitter.py
1.1-basic-rag/vector_store/: __init__.py  chroma_store.py
1.2-corrective_rag/: .gitignore
